[package]
name = "twopc-mpc-experiment"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
rand_core = "0.9.3"    # for RNG later
sha2 = "0.10"        # for RFC6979 later
hmac = "0.12"        # for RFC6979 later
zeroize = { version = "1", features = ["zeroize_derive"] }
thiserror = "1"
serde = { version = "1", features = ["derive" ] }